--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -12,11 +12,52 @@
       <h1 class="title">Frequently asked questions</h1>
 
       <div class="faq">
-         <h3 class="faq-title"></h3>
-         <button class="faq-toggle"></button>
+         <h3 class="faq-title">Question #1</h3>
+         <p class="faq-text">They make up everything</p>
+         <button class="faq-toggle">
+            <i class="fas fa-angle-down"></i>
+            <i class="far fa-times-circle"></i>
+         </button>
+      </div>
+
+      <div class="faq">
+         <h3 class="faq-title">Question #1</h3>
+         <p class="faq-text">They make up everything</p>
+         <button class="faq-toggle">
+            <i class="fas fa-angle-down"></i>
+            <i class="far fa-times-circle"></i>
+         </button>
+      </div>
+
+      <div class="faq">
+         <h3 class="faq-title">Question #1</h3>
+         <p class="faq-text">They make up everything</p>
+         <button class="faq-toggle">
+            <i class="fas fa-angle-down"></i>
+            <i class="far fa-times-circle"></i>
+         </button>
+      </div>
+
+      <div class="faq">
+         <h3 class="faq-title">Question #1</h3>
+         <p class="faq-text">They make up everything</p>
+         <button class="faq-toggle">
+            <i class="fas fa-angle-down"></i>
+            <i class="far fa-times-circle"></i>
+         </button>
+      </div>
+
+      <div class="faq">
+         <h3 class="faq-title">Question #1</h3>
+         <p class="faq-text">They make up everything</p>
+         <button class="faq-toggle">
+            <i class="fas fa-angle-down"></i>
+            <i class="far fa-times-circle"></i>
+         </button>
       </div>
    </div>
 
+   <script src="https://kit.fontawesome.com/d888e85d4a.js" crossorigin="anonymous"></script>
    <script src="./main.js"></script>
 </body>
 </html>
